# Changelog

## Next version

- Updated to Android 30 (also the minimal version)

--- FORK BY 1tchy ---

## 1.1.19 - 2019-06-13

- completely switched to AndroidX and AppCompat
- added localization for Bahasa Indonesia (thanks joielechong)
- added localization for Georgian
- fix #69, and other small bugs
- removed deprecated methods:
  - new ChooserDialog()
  - with(Context cxt)
  - dismissOnButtonClick(final boolean dismissOnButtonClick)
  - withRowLayoutView(@LayoutRes int layoutResId)
  - followDir(boolean followDir))


## 1.1.19 - 2019-04-27

- bugs fixed
- minor fixes for themes
- #60, #61, #62 fixed
- revamped Dpad controls
- added cancelOnTouchOutside and enableDpad (true by default)
- mainly by Guiorgy.


## 1.1.18 - 2019-04-27

- temporary release with gradle 5.1.1 compartibility test.
- this library works within androidx project.


## 1.1.17 - 2019-03-28

- bugs fixed
- rewrite demo app
- small tunes
  - show dlg after permissions granted, without fault
  - better text color and dark facade
  - displaying the current path string
  - etc.


## 1.1.16 - 2019-03-03

- #46, #47, #48
- bugs fixed
- `displayPath` by **Guiorgy**
- new style demo app will be released, by **Guiorgy**


## 1.1.15 - 2019-02-25

- #42: withOnBackPressedListener not fired
  clarify `onCancelListener`, obsolete `onBackListener`
- #44: .with(this) in the sample code is obsolete
  doc updated, demo codes updated.
  readme doc reviewed
- #45: Does not display the name of a selected folder
  Add `titleFollowsDir(boolean)`.


## 1.1.14 - 2019-01-18

no more details

## 1.1.12 ~ 1.1.14

the publishing had matters.
(Guiorgy: LOL)


## 1.1.11 - 2018-10-08

- Create new folder on the fly, and the optional multiple select mode for developer, thx [Guiorgy](https://github.com/Guiorgy) and his [android-smbfile-chooser](https://github.com/Guiorgy/android-smbfile-chooser)