@@ -3,6 +3,7 @@
 ## Next version
 
 - Updated to Android 30 (also the minimal version)
+- No more prompting for permissions
 
 --- FORK BY 1tchy ---
 
